stylesheet.css
/*VARIABLES*/

:root {
	--fpo-bg-color: #e1e1e1;
	--fpo-bg2-color:#a9a9a9;
	--body: inconsolata;
}

/*RULES*/

@font-face {
	font-family: inconsolata;
	src: url(fonts/insconsolata.eot);
	src: url(fonts/Inconsolata.woff) format('woff'), url(fonts/Inconsolata.ttf) format('truetype'), url(fonts/Inconsolata.svg) format('svg'), local('Inconsolata'), local('Inconsolata'), url('fonts/insconsolata.eot');
}

@font-face {
	font-family: raisonne;
	src: url(fonts/Raisonne_Demibold.eot);
	src: url(fonts/Raisonne_Demibold.woff) format('woff'), url(fonts/Raisonne_Demibold.ttf) format('truetype'), url(fonts/Raisonne_Demibold.svg) format('svg'), local('Raisonne'), local('Raisonne_Demibold'), url('fonts/Raisonne_Demibold.eot');
}

* {
}

html {
	position: relative;
	margin: 0;
}

html, body {
	height: 100%;
}

body {
	background: #fff;
	animation-name: fadeIn;
	animation-duration: 2s;
	animation-fill-mode: forwards;
}


h1 {
	font-family: raisonne, sans-serif;
	font-size: 48px;
	color: #ED3E3E;
	margin-bottom: -5px;
}

h2 {
	font-family: raisonne, sans-serif;
	font-size: 28px;
	color: #ED3E3E;
}

h4 {
	font-family: inconsolata, monospace;
	line-height: 24px;
	font-size: 18px;
}

.highlight-header, h2{
	position: relative;
	z-index: 1;
}

.highlight-header:after, h2:after{
	background-color: #FCE7EC;
	bottom: 0;
	top: 20px;
	content: ' ';
	display: block;
	height: 35%;
	left: 7px;
	opacity: 1;
	position: absolute;
	width: 150px;
	z-index: -1;
}

p {
	font-family: inconsolata, monospace;
	line-height: 20px;
	font-size: 16px;
}


.small{
	font-size: 14px;
}

li a {
	font-family: inconsolata, monospace;
	font-size: 18px;
	text-decoration: none;
}

a {
	text-decoration: none;
	color: black;
}


.inline-h4{
	font-family: inconsolata, monospace;
	font-size: 20px;
	color: black;
}

/*ANIMATIONS*/

@keyframes blur {
	from {
		filter: blur(0);
	}
	to {
		filter: blur(4px);
		transform: scale(1.1);
	}
}

@keyframes fadeIn {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

@keyframes nudge {
	from {
		margin-top: inherit;
		margin-right: inherit;
		box-shadow: none;
	}
	to {
		margin-top: -1px;
		margin-left: 1px;
		border: 4px solid black;
		box-shadow: 8px 8px #000;
	}
}


/*WRAPPER*/
.wrapper {
	position: relative;
	display: block;
	min-height: 100%;
	margin: 0 auto;
	width: 1280px;
	justify-content: center;
}

/*GRID CONTAINER*/
/*THE HOVER + OVERLAY + TEXT APPEAR WORKS BITCH!!! GREAT JOB!!! WOOO*/

.container {
	position: relative;
	display: grid;
	grid-template-columns: auto auto auto auto;
	grid-gap: 20px;
	text-align: center;
}

.overlay{
	position: relative;
	bottom: 0;
	left: 0;
	right: 0;
	overflow: hidden;
	width: 100%;
	height: 100%;
	border-radius: inherit;
}
/*add a class for img otherwise it'll get messy ha*/

.item {
	position: relative;
	border-radius: 8px;
	margin: 5px;

}

.item:hover {
	animation-name: nudge;
	animation-fill-mode: forwards;
}

.grid-img{
	vertical-align: top;
	width: inherit;
	height: inherit;

}

.item:hover .grid-img{
	visibility: hidden;
}

.work-text{
	font-family: inconsolata, monospace;
	z-index: 1;
	color: #E80000;
	font-size: 1.5em;
	position: absolute;
	top: 50%;
	left: 50%;
	opacity: 0;
	transform: translate(-50%, -50%);
	text-align: center;
	width: 90%;
}

.item:hover .overlay{
	background-color: #FCE7EC;
	opacity: 1;
	background: cover;
}

.item:hover .work-text{
	opacity: 1;
}


.static-img {
	max-width: 100%;
	min-height: 100%;
}

/*GLOBAL NAVIGATION*/

.global-nav {
	width: 100%;
	display: inline-block;
	position: relative;
	text-align: center;
	margin: 0 auto;
	padding-top: 10px;
	padding-bottom: 10px;
	padding-left: -15px;
}

.global-nav li{
	text-align: center;
	display: inline;
	list-style-type: none;
	padding-right: 30px;

}

.nav-link {
	color: black;
	padding-top: 5px;
	padding-bottom: 5px;
	padding-left: 20px;
	padding-right: 20px;
	background-color: #FCE7EC;
	border-radius: 6px;
	box-shadow: 2px 2px #000;
	border: solid 2px black;
}

.nav-link:hover {
	background-color: #FFA3BB;
}

/*HEADER CONTENT*/
.header-content{
	text-align: left;
	width: 1080px;
	height: 60%;
}

.secondary-header-content{
	text-align: left;
	width: 1080px;
	height: 60%;
	padding-bottom: 30px;
	padding-top: 110px;
}

/*WORK PAGES*/

.content-container {
	display: grid;
	grid-template-columns: auto auto;
	grid-gap: 10px;
	grid-auto-rows: auto;
	margin: 0 auto;
	width: 80%;
	height: 80%;
}

.content-container-block{
	width: 100%;
	position: relative;
	display: grid;
	grid-template-columns: auto;
	grid-gap: 10px;
	grid-auto-rows: auto;
	margin: 0 auto;
}

iframe {
	width: 1280px;
	height: 720px;
	align: center;
}

.work-img {
	margin: 0 auto;
	width: auto;
	height: 100vw;
}

.work-header-content{
	text-align: left;
	max-width: 1024px;
}

iframe {
	margin: 0 auto;
}

/*ABOUT PAGE SPECIFIC*/
.experience-container {
	text-align: left;
	width: 1080px;
	height: 60%;
	padding-bottom: 30px;
}

.education-container {
	text-align: left;
	width: 1080px;
	height: 60%;
	padding-bottom: 30px;

}
/*GLOBAL FOOTER*/

.global-footer {
	text-align: center;
	background: #fff;
}

.global-footer li{
	display: inline;
	list-style-type: none;
	padding-right: 20px;

}

.footer-link {
	color: black;
}

.footer-text{
	color: black;
	padding-left: 15px;
	padding-top: 20px;
	padding-bottom: 20px;
	text-align: center;
	font-size: 18px;
}

/*MEDIA QUERIES*/


/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
	html, body {
		margin: 0 auto;
	}

	h1 {
		font-size: 42px;
	}

	li a {
		font-family: inconsolata, monospace;
		font-size: 16px;
		text-decoration: none;
	}

	table {
		width: 100px;
	}

	.wrapper {
		margin: 0 auto;
		width: 90%;
		min-height: 100%;
		position: relative;
	}


	.work-header-content {
		text-align: left;
		width: 100%;
		height: 100%;
		padding-bottom: 100px;
	}

	.header-content{
		text-align: left;
		width: 90vw;
		height: 100%;
		padding-bottom: 100px;
	}

	.header-content h1{
		padding-top: 50px;
	}

	.content-container {
		display: grid;
		margin: 0 auto;
		width: auto;
		height: 100%;
		grid-template-columns: auto;

	}

	.content-container-block{
		width: 100%;
		position: relative;
		display: grid;
		grid-template-columns: auto;
		grid-gap: 10px;
		grid-auto-rows: auto;
		margin: 0 auto;
	}

	iframe {
		width: 100%;
		max-width: 1280px;
		max-height: 720px;
		align: center;
		padding-top: 10px;
		padding-bottom: 10px;
	}

	.work-img {
		width: 100%;
		height: auto;
	}

	.container {
		position: relative;
		display: grid;
		grid-template-columns: auto;
		grid-row-gap: 30px;
		text-align: center;
	}

	.secondary-header-content,
	.experience-container,
	.education-container {
		width: 90vw;
	}

	.item {
		position: relative;
		border-radius: 8px;
		background-color: #FCE7EC;
		margin: 5px;
		margin-top: -1px;
		margin-left: 1px;
		height: 200px;
		border: 4px solid black;
		box-shadow: 8px 8px #000;

	}
	.item .work-text{
		opacity: 1;

	}

	.grid-img{
		visibility: hidden;
	}


	.global-footer {
		padding-right: 15px;
		height: 200px;
		position: sticky;
		margin-top: 50px;
		padding-top: 25px;
	}

	.footer-text{
		padding-top: 20px;
		padding-bottom: 20px;
		text-align: center;
		font-size: 18px;
	}
}

/* Extra small devices (phones, 768px and down) */
@media screen and (min-width: 600px) {
	html, body {
		margin: 0 auto;
	}

	h1 {
		font-size: 42px;
	}

	li a {
		font-family: inconsolata, monospace;
		font-size: 16px;
		text-decoration: none;
	}

	table {
		width: 100px;
	}

	.wrapper {
		margin: 0 auto;
		width: 90%;
		min-height: 100%;
	}

	.work-header-content {
		text-align: left;
		width: 100%;
		height: 100%;
		padding-bottom: 100px;
	}

	.header-content{
		text-align: left;
		width: 100%;
		height: 100%;
		padding-top: 50px;
		padding-bottom: 150px;

	}

	.secondary-header-content,
	.experience-container,
	.education-container {
		width: 100%;
	}


	.header-content h1{
		padding-top: 50px;
	}

	.content-container {
		display: grid;
		margin: 0 auto;
		width: auto;
		height: 100%;
	}

	.content-container-block{
		width: 100%;
		position: relative;
		display: grid;
		grid-template-columns: auto;
		grid-gap: 10px;
		grid-auto-rows: auto;
		margin: 0 auto;
	}

	iframe {
		width: 100%;
		max-width: 1280px;
		max-height: 720px;
		align: center;
		padding-top: 20px;
		padding-bottom: 20px;
	}

	.work-img {
		width: 100%;
		height: auto;
	}


	.container {
		position: relative;
		display: grid;
		grid-template-columns: auto;
		grid-row-gap: 30px;
		text-align: center;
	}

	.work-text {
		font-size: 2em;
	}

	.global-footer {
		width: 100%;
		display: block;
		position: sticky;
		height: 200px;
		padding-top: 20px;
		padding-bottom: 20px;
		margin-top: 50px;
	}

	.footer-text{
		padding-top: 20px;
		padding-bottom: 20px;
		text-align: center;
		font-size: 18px;
	}
}


/* Tablet devices (tablets/laptops, 768px and up) */
@media screen and (min-width: 768px) {
	html, body {
		margin: 0 auto;
	}

	h1 {
		font-size: 42px;
	}

	li a {
		font-family: inconsolata, monospace;
		font-size: 16px;
		text-decoration: none;
	}

	table {
		width: 100px;
	}
	.wrapper {
		margin: 0 auto;
		width: 90%;
		min-height: 100%;
	}


	.work-header-content {
		text-align: left;
		width: 100%;
		height: 100%;
		padding-bottom: 100px;
	}

	.header-content{
		text-align: left;
		width: 100%;
		height: 100%;
		padding-bottom: 150px;
	}

	.header-content h1{
		padding-top: 50px;
	}

	.secondary-header-content,
	.experience-container,
	.education-container {
		width: 90%;
	}

	.content-container {
		display: grid;
		margin: 0 auto;
		width: auto;
		height: 100%;
	}

	.work-img {
		width: 100%;
		height: auto;
	}


	.container {
		position: relative;
		display: grid;
		grid-template-columns: auto auto;
		grid-gap: 30px;
		text-align: center;
	}

	.work-text{
		font-size: 28px;

	}

	.global-footer {
		background-color: #fff;
		display: block;
		position: relative;
    left: 0;
    bottom: 0;
    height: 100px;
    width: 100%;
    overflow: hidden;

	}
	.footer-text{
		padding-top: 20px;
		padding-bottom: 20px;
		text-align: center;
		font-size: 18px;
	}
}

/* Extra small devices (desktop, 1024 and up) */
@media screen and (min-width: 1024px) {

	h1 {
		font-size: 42px;
	}

	li a {
		font-family: inconsolata, monospace;
		font-size: 16px;
		text-decoration: none;
	}

	table {
		width: 100px;
	}

	.wrapper {
		margin: 0 auto;
		width: 90%;
		min-height: 100%;
	}

	.work-header-content {
		text-align: left;
		width: 100%;
		height: 100%;
		padding-bottom: 100px;
	}

	.header-content{
		text-align: left;
		width: 1024px;
		height: 100%;
		padding-top: 50px;
		padding-bottom: 150px;
	}

	.header-content h1{
		padding-top: 50px;
	}

	.secondary-header-content,
	.experience-container,
	.education-container {
		width: 1024px;
	}
	@-moz-document url-prefix() {

		.secondary-header-content,
		.experience-container,
		.education-container{
			width: 1024px;
		}
	}

	.content-container {
		display: grid;
		margin: 0 auto;
		height: 100%;
	}

	.work-img {
		width: 100%;
		height: auto;
		max-width: 1200px;
	}

	.container {
		position: relative;
		display: grid;
		grid-template-columns: auto auto auto auto;
		grid-gap: 10px;
		text-align: center;
	}

	.content-container-block{
		width: 100%;
		position: relative;
		display: grid;
		grid-template-columns: auto;
		grid-gap: 10px;
		grid-auto-rows: auto;
		margin: 0 auto;
	}

	iframe {
		width: 100%;
		max-width: 1720px;
		max-height: 720px;
		align: center;
	}

	.global-footer {
		bottom: 0px;
		padding-bottom: 100px;
	}

	.footer-text{
		padding-top: 20px;
		padding-bottom: 20px;
		text-align: center;
		font-size: 18px;

